--- a/curitiba.ipynb
+++ b/curitiba.ipynb
@@ -1193,15 +1193,15 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: YDVSOOEX3YWTRV5F1ESJF22KNPQNOISRQQDTS1AZDID1KPUC\n",
-      "CLIENT_SECRET:1QUY23CO5FV3PPBQDTIG1FB3NGPYDGFDAEVPZS3NJA24YIRO\n"
+      "CLIENT_ID: \n",
+      "CLIENT_SECRET:\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'YDVSOOEX3YWTRV5F1ESJF22KNPQNOISRQQDTS1AZDID1KPUC' # your Foursquare ID\n",
-    "CLIENT_SECRET = '1QUY23CO5FV3PPBQDTIG1FB3NGPYDGFDAEVPZS3NJA24YIRO' # your Foursquare Secret\n",
-    "ACCESS_TOKEN = 'CCBAMLDHUTEX1BVHPVFFDULUBGXL2BZCSZI30TKNH04XWMBA' # your FourSquare Access Token\n",
+    "CLIENT_ID = '' # your Foursquare ID\n",
+    "CLIENT_SECRET = '' # your Foursquare Secret\n",
+    "ACCESS_TOKEN = '' # your FourSquare Access Token\n",
     "VERSION = '20180604'\n",
     "LIMIT = 30\n",
     "print('Your credentails:')\n",
